cros: Send views-based login user count to display_manager.js

1. Unify the Gaia and network screens to use the same |userCount|.

2. Does not unify the views and WebUI login because:
   1) It's probably better to check $('pod-row').pods.length in WebUI
      since loading the pods takes some time.
   2) The WebUI is being deprecated soon.

Bug: 838083
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ifac5797f244d08815e2357404e95c4ba7f9f953a
Reviewed-on: https://chromium-review.googlesource.com/1040769
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555949}
Former-commit-id: 3b1e8cec8394292f39d98737654f32db6bf72995