chrome/browser/ui/webui/chromeos/login/core_oobe_handler.h
@@ -77,6 +77,9 @@ class CoreOobeHandler : public BaseWebUIHandler,
   // false.
   void UpdateShutdownAndRebootVisibility(bool reboot_on_shutdown);
 
+  // Notify WebUI of the user count on the views login screen.
+  void SetLoginUserCount(int user_count);
+
  private:
   // CoreOobeView implementation:
   void ShowSignInError(int login_attempts,
