chrome/browser/ui/webui/chromeos/login/oobe_ui.h
@@ -190,6 +190,9 @@ class OobeUI : public content::WebUIController,
   // Re-evaluate OOBE display placement.
   void OnDisplayConfigurationChanged();
 
+  // Notify WebUI of the user count on the views login screen.
+  void SetLoginUserCount(int user_count);
+
  private:
   // Lookup a view by its statically registered OobeScreen.
   template <typename TView>
